css/main.css
/* ... */
ul,
ol {
  list-style-type: none;
}

a {
  color: #e2e3ed;
  text-decoration: none;
}
/* in solution code, they include this
under .hero-area h1 { }. I'm not sure why. Waiting to hear back
h1 {
  font-family: "Poppins", sans-serif;
  font-size: 2.25em;
  font-weight: 500;
  line-height: 1.2;
} */

h2 {
  font-family: "Poppins", sans-serif;
  font-size: 1.875em;
  font-weight: 500;
}

h3,
h4 {
  font-family: "Poppins", sans-serif;
  font-size: 1.125em;
  font-weight: 500;
  margin: 20px 0;
}

p {
  font-size: 0.875em;
  line-height: 1.285;
}

img {
  width: 100%;
}

figure {
  margin: 0;
}

address {
  font-style: normal;
}

.content-wrapper {
  width: 90%;
  margin: 50px 0;
}

/*------------ Base Styles - Header & Footer-------------*/

header,
footer {
  background-color: #202322;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
}

/* Header Styles */

header {
  padding: 15px 0;
}

header .content-wrapper {
  margin: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
}

.header-divider {
  background: #3a3a3a;
  width: 100%;
  height: 1px;
  margin: 10px 0 20px 0;
}

header figure {
  width: 60%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
} 

header nav {
  width: 60%;
  font-size: 1.125em;
  font-weight: 700;
  text-transform: uppercase;
  display: flex;
  justify-content: space-around;
  align-items: center;
  flex-flow: row wrap;
}

header nav ul {
  padding: 0;
  width: 100%;
  display: flex;
  justify-content: space-around;
}

header nav ul li {
  font-size: 1.125em;
}

/* Footer Styles */

footer {
  text-align: center;
  flex-direction: column;
}

footer p {
  margin: 0;
}

footer .content-wrapper {
  width: 55%;
  margin: 50px 0;
}

/*not in solution:
footer .footer-content {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: column wrap;
  border: 2px solid brown;
}*/

footer .contact {
  margin-bottom: 50px;
  /*not in solution:
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: column wrap;
  border: 2px solid brown;*/
}

footer .social-icons {
  display: flex;
  justify-content: space-around;
  align-items: center;
}

footer .social-icons p {
  display: flex;
  justify-content: center;
  align-items: center;
  background: #527158;
  border-radius: 50%;
  width: 40px;
  height: 40px;
}

footer .social-icons i {
  font-size: 1.3125em;
}

footer .copyright {
  margin: 20px 0;
}

/*------------ Mobile Styles - Homepage-------------*/
/* not in solution 
main .content-wrapper {
  width: 85%;
}
*/

.hero-area {
  display: flex;
  justify-content: center;
  flex-flow: row wrap;
  background: url('../img/hero.jpg');
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  background-color: #333; 
  min-height: 500px;
}

/* I put this in global styles above. why don't they? waiting to hear back*/
.hero-area h1 {
  font-size: 2.25em;
  font-family: "Poppins", Helvetica, Arial, sans-serif;
  font-weight: 500;
  line-height: 1.2;
}

aside {
  background-color: #527158;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
}

aside .form-description {
}
aside .form {
  margin-top: 30px;
}

input[type="text"] {
  box-sizing: border-box;
  width: 100%;
  color: #2a423a;
  font-style: italic;
  padding: 1em;
}

input[type="button"] {
  width: 100%;
  padding: 20px 0;
  margin-top: 20px;
  background-color: #2a423a;
  font-family: "Poppins", Helvetica, Arial, sans-serif;
  font-weight: 500;
  font-size: 1.125em;
  color: #e2e3ed;
  border: none;
  text-align: center;
  text-transform: uppercase;
}

.features {
  display: flex;
  justify-content: center;
  flex-flow: row wrap;
  background: url('../img/gathering.jpg');
  background-size: cover;
  background-position: center;
}

.features h2 {
  margin-bottom: 60px;
}

.features article {
  width: 63%;
  margin: 30px 0;
}

.features .features-items {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
}

.features p {
  text-align: center;
  margin: 0;
}

.features i { 
  font-size: 3.75em;
  margin-bottom: 40px;
}

.reviews {
  background-color: #2a423a;
  display: flex;
  justify-content: center;
  flex-flow: row wrap;
}

.reviews h2 {
  margin-bottom: 40px;
  line-height: 1;
}

.reviews h3 {
  width: 55%;
  margin: 20px 0;
}

/********  ABOUT PAGE ********/
.mission {
  background-color: #527158;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
}

.contact-section {
  background-color: #2a423a;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
}

.contact-content p {
  margin: 0;
}

.map figure {
  position: relative;
  padding-bottom: 125%;
  height: 0;
  width: 100%;
  overflow: hidden;
}

.map iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}
/******** FAQ PAGE **********/
.faq {
  background-color: #527158;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
}

.faq .content-wrapper {
  margin: 50px 0 0 0;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
}

.faq h2 {
  margin-bottom: 40px;
  line-height: 1;
}

.faq-content {
  margin-bottom: 50px;
}

.faq-content h4 {
  line-height: 1.333;
}

/* ==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Hide visually and from screen readers
 */

.hidden {
  display: none !important;
}
/* ... */

